--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.7.12",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.1",
+    "slugify": "^1.3.6",
     "uuid": "^3.3.3"
   }
 }
